cot-macros/tests/ui/attr_migration_op_return_type_invalid.rs
#[allow(unused)]
use cot::db::migrations::{MigrationContext, migration_op};

#[migration_op]
async fn my_migration(_ctx: MigrationContext<'_>) {}

fn main() {}
